🚧  wip: troubleshooting test project deps

--- a/BuildingMonitor/BuildingMonitor.Tests/BuildingMonitor.Tests.csproj
+++ b/BuildingMonitor/BuildingMonitor.Tests/BuildingMonitor.Tests.csproj
@@ -10,7 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BuildingMonitor\BuildingMonitor.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.5.12" />
     <PackageReference Include="Akka.TestKit.Xunit2" Version="1.5.12" />
+    <PackageReference Include="Akka.TestKit" Version="1.5.12" />
+    <PackageReference Include="xunit" Version="2.5.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
