--- a/BuildingMonitor/BuildingMonitor.Tests/BuildingMonitor.Tests.csproj
+++ b/BuildingMonitor/BuildingMonitor.Tests/BuildingMonitor.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -10,16 +10,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildingMonitor\BuildingMonitor.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Akka" Version="1.5.12" />
     <PackageReference Include="Akka.TestKit.Xunit2" Version="1.5.12" />
-    <PackageReference Include="Akka.TestKit" Version="1.5.12" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
     <PackageReference Include="xunit" Version="2.5.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BuildingMonitor\BuildingMonitor.csproj" />
+  </ItemGroup>
+
 </Project>
